src/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  height: 100vh;
  font-family: "Poppins", sans-serif;
  background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
}
.container {
  background-image: linear-gradient(
    to bottom right,
    rgb(204, 16, 119),
    rgb(231, 191, 213)
  );
  margin: 3rem auto;
  max-width: 600px;
  padding: 2rem;
  overflow: hidden;
  border-radius: 5px;
}

.header {
  text-align: center;
  margin: 2rem;
}

.btn {
  border: none;
  cursor: pointer;
  text-transform: uppercase;
  outline: none;
  color: #fff;
  font-weight: 700;
  font-size: 0.9rem;
  padding: 1rem;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  margin-top: 1rem;
}

.form-control {
  margin: 20px 0;
}

.form-control label {
  display: block;
}

.form-control input {
  width: 100%;
  height: 40px;
  padding: 1rem;
  font-size: 1rem;
  border-radius: 5px;
  border: none;
}

.btn-submit {
  display: block;
  width: 100%;
  background-color: purple;
  margin: 2rem 0;
}

.task {
  background: #f4f4f4;
  margin: 0.7rem;
  padding: 0.5rem 1rem;
  cursor: pointer;
}

.done {
  border-left: 10px solid rgb(102, 18, 77);
  text-decoration: line-through;
  background-color: darkgrey;
}

.task h3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.text-center {
  text-align: center;
}

